katalog form design completed
DB changed

--- a/booklist/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/booklist/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -97,6 +97,9 @@
     <EmbeddedResource Include="Form1.shi.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="katalogfrm.resx">
+      <DependentUpon>katalogfrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
